# gmail_api

./: pyproject.toml
src/gmail_api/: __init__.py  api.py  email_msg.py  logging.py  utils.py
